# normpic

./: .gitignore  README.md  config.local.template.json  conftest.py  main.py  performance_results_config_local.json  performance_results_config_local_web.json  pyproject.toml
cli/: main.py
doc/: CHANGELOG.md  CONTRIBUTE.md  README.md  TODO.md
doc/analysis/: README.md  performance.md  timestamps.md
doc/architecture/: README.md  data-models.md  module-organization.md  schema-versioning.md  template-util-split.md
doc/guides/: README.md  cli.md  configuration.md  environment-variables.md  errors.md  gallery-builder-integration.md  integration.md  manifest-integration.md  parent-project-setup.md
doc/modules/: README.md  exif.md  filesystem.md  manifest.md  organization.md  photo-manager.md  schema.md
doc/test/: README.md  fixtures.md  integration-tests.md  patterns.md
hook/: commit-msg
lib/manager/: manifest_manager.py  photo_manager.py
script/: performance_test.py
src/: __init__.py
src/manager/: config_manager.py  manifest_manager.py  photo_manager.py
src/model/: config.py  exif.py  manifest.py  pic.py  schema_v0.py
src/serializer/: manifest.py
src/template/: __init__.py  filename.py
src/util/: error_handling.py  exif.py  filesystem.py
test/: fixtures.py
test/integration/: __init__.py  test_cli.py  test_config_precedence.py  test_error_handling_workflow.py  test_exif_filename_workflow.py  test_filesystem_operations_workflow.py  test_manifest_loading_workflow.py  test_photo_organization_workflow.py
test/unit/: test_config.py  test_models.py  (+11 more)
